packages/typ/tests/fixtures/diagnostics/0094_core_match_branch_mismatch_08.ml.expected
File "0094_core_match_branch_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0094_core_match_branch_mismatch_08 is not a valid module name.

File "0094_core_match_branch_mismatch_08.ml", line 4, characters 13-18:
4 |   | false -> false
                 ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
